--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation files('libs/Msc.jar')
   //  compile project(':MscLibSrc')
     //noinspection GradleCompatible
-    implementation 'com.android.support:support-v4:23+'
+    implementation 'com.android.support:support-v4:23.4.0'
 }
 
 buildscript {
